--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,5 @@ ModelManifest.xml
 /ConsoleApplicationSetup/ConsoleApplicationSetup-SetupFiles
 /EPUBConsoleApplicationSetup/EPUBConsoleApplicationSetup-SetupFiles
 /ConsoleApplicationSetup/ConsoleApplicationSetup-cache
+/CREPDL/FSharp.Core.dll
+/CREPDL/Basics.dll
