--- a/EPUBValidatorGUI/EPUBValidatorGUI.csproj
+++ b/EPUBValidatorGUI/EPUBValidatorGUI.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{6D73089C-C5ED-457B-B767-B073414E0907}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>GUI</RootNamespace>
-    <AssemblyName>GUI</AssemblyName>
+    <AssemblyName>EPUBValidatorGUI</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
