Update upto AMENDMENT 2, 2019

--- a/CREPDL/CREPDL.fsproj
+++ b/CREPDL/CREPDL.fsproj
@@ -90,16 +90,32 @@
     <EmbeddedResource Include="288.txt" />
     <EmbeddedResource Include="301.txt" />
     <EmbeddedResource Include="302.txt" />
-    <EmbeddedResource Include="-303.txt" />
-    <EmbeddedResource Include="-304.txt" />
-    <EmbeddedResource Include="-306.txt" />
-    <EmbeddedResource Include="-307.txt" />
-    <EmbeddedResource Include="308.txt" />
-    <EmbeddedResource Include="309.txt" />
-    <EmbeddedResource Include="310.txt" />
-    <EmbeddedResource Include="311.txt" />
-    <EmbeddedResource Include="314.txt" />
     <EmbeddedResource Include="-340.txt" />
+    <EmbeddedResource Include="JAPANESE IT VENDORS CONTEMPORARY IDEOGRAPHS-1993.txt" />
+    <EmbeddedResource Include="JAPANESE JIS X 0213-2004 IDEOGRAPHS FROM PREVIOUS JIS STANDARDS.txt" />
+    <EmbeddedResource Include="JapaneseCoreKanji.txt" />
+    <EmbeddedResource Include="Age12-1.txt" />
+    <EmbeddedResource Include="Age12-0.txt" />
+    <EmbeddedResource Include="Age11-0.txt" />
+    <EmbeddedResource Include="Age10-0.txt" />
+    <EmbeddedResource Include="Age9-0.txt" />
+    <EmbeddedResource Include="Age8-0.txt" />
+    <EmbeddedResource Include="Age7-0.txt" />
+    <EmbeddedResource Include="Age6-3.txt" />
+    <EmbeddedResource Include="Age6-2.txt" />
+    <EmbeddedResource Include="Age6-1.txt" />
+    <EmbeddedResource Include="Age6-0.txt" />
+    <EmbeddedResource Include="Age5-2.txt" />
+    <EmbeddedResource Include="Age5-1.txt" />
+    <EmbeddedResource Include="Age5-0.txt" />
+    <EmbeddedResource Include="Age4-1.txt" />
+    <EmbeddedResource Include="Age4-0.txt" />
+    <EmbeddedResource Include="Age3-2.txt" />
+    <EmbeddedResource Include="Age3-1.txt" />
+    <EmbeddedResource Include="Age3-0.txt" />
+    <EmbeddedResource Include="Age2-1.txt" />
+    <EmbeddedResource Include="Age2-0.txt" />
+    <EmbeddedResource Include="Age1-1.txt" />
     <Content Include="packages.config" />
     <None Include="icu4c.readme.txt" />
   </ItemGroup>
