--- a/電子化文書の日本語レパートリー検証/電子化文書の日本語レパートリー検証.fsproj
+++ b/電子化文書の日本語レパートリー検証/電子化文書の日本語レパートリー検証.fsproj
@@ -31,11 +31,11 @@
         <TrimmableAssembly Include="Avalonia.Themes.Default" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="0.10.14" />
-        <PackageReference Include="Avalonia.Desktop" Version="0.10.14" />
+        <PackageReference Include="Avalonia" Version="0.10.15" />
+        <PackageReference Include="Avalonia.Desktop" Version="0.10.15" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.14" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.14" />
+        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.15" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.15" />
         <PackageReference Include="HtmlAgilityPack" Version="1.11.43" />
     </ItemGroup>
     <ItemGroup>
@@ -43,5 +43,8 @@
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\CREPDL\CREPDL.fsproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Update="FSharp.Core" Version="6.0.5" />
     </ItemGroup>
 </Project>
